--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "three": "^0.178.0"
   },
   "devDependencies": {
-    "vite": "^7.0.6"
+    "vite": "^7.1.2"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
